# emilio-accretion

./: .gitignore  accretion-notes.org  accretion-refs.bib  main.py  modified-bhl.bbl  modified-bhl.tex  pyproject.toml
notebooks/: bhl-finite-refill.ipynb  bhl-roche.ipynb  bhl-trajectories.ipynb
notebooks/.ipynb_checkpoints/: bhl-roche-checkpoint.ipynb
