[project]
name = "emilio-accretion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
